Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/limits/ArrayDims4.out
ArrayDims4.java:11:23: compiler.err.limit.dimensions
1 error
